# FlightTrainerSim

./: FlightTrainerSim.sln
FlightTrainerSim/: Aircraft.cpp  Aircraft.h  AircraftFactory.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  ClassDiagram.cd  Cockpit3DView.cpp  Cockpit3DView.h  DebriefWindow.cpp  DebriefWindow.h  Environment.cpp  Environment.h  FlightControlPanel.cpp  FlightControlPanel.h  FlightMetrics.cpp  FlightMetrics.h  FlightTrainerSim.cpp  FlightTrainerSim.h  FlightTrainerSim.qrc  FlightTrainerSim.ui  FlightTrainerSim.vcxproj  FlightTrainerSim.vcxproj.filters  GlobalConfig.h  IFlightModel.cpp  IFlightModel.h  MainWindow.cpp  MainWindow.h  Outside3DView.cpp  Outside3DView.h  README.md  SimulationEngine.cpp  SimulationEngine.h  TrainingScenario.cpp  TrainingScenario.h  build.bat  main.cpp
